[package]
name = "jisho"
version = "0.2.3"
authors = ["Aku Kotkavuo <aku.kotkavuo@gmail.com>"]
edition = "2021"
description = "Jisho is a CLI tool & Rust library that provides a Japanese-English dictionary."
readme = "README.md"
repository = "https://github.com/eagleflo/jisho"
license = "GPL-3.0+"
keywords = ["japanese", "dictionary", "kanji"]
categories = ["command-line-utilities"]
exclude = ["Jisho.org", "JMdict_e.xml", "kanjidic2.xml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6.3"
flate2 = "1.0.35"
lazy_static = "1.4.0"
rustc-hash = "2.0.0"
rustyline = "15.0.0"

[build-dependencies]
bitcode = "0.6.3"
flate2 = "1.0.35"
roxmltree = "0.20.0"
