[package]
name = "jisho"
version = "0.2.10"
authors = ["Aku Kotkavuo <aku.kotkavuo@gmail.com>"]
edition = "2024"
description = "Jisho is a CLI tool & Rust library that provides a Japanese-English dictionary."
readme = "README.md"
repository = "https://github.com/eagleflo/jisho"
license = "GPL-3.0+"
keywords = ["japanese", "dictionary", "kanji"]
categories = ["command-line-utilities"]
exclude = ["Jisho.org", "JMdict_e.xml", "kanjidic2.xml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6.9"
flate2 = "1.1.9"
lazy_static = "1.5.0"
rustc-hash = "2.1.1"
rustyline = "17.0.2"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bitcode = "0.6.9"
flate2 = "1.1.9"
roxmltree = "0.21.1"
rustc-hash = "2.1.1"

[features]
compression = []
